--- a/data_transformation/Matching_Giftcard_data_with_donation_data.ipynb
+++ b/data_transformation/Matching_Giftcard_data_with_donation_data.ipynb
@@ -7098,12 +7098,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "TopUp_Projects.to_csv('C://Users/vivek4/Downloads/donorschoose_data/TopUp_Projects.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(64689, 71)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TopUp_Projects.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
