--- a/data_transformation/Matching_Giftcard_data_with_donation_data.ipynb
+++ b/data_transformation/Matching_Giftcard_data_with_donation_data.ipynb
@@ -9576,7 +9576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -9600,8 +9600,8 @@
       "donation_included_optional_support          64689 non-null object\n",
       "payment_method                              64689 non-null object\n",
       "payment_included_acct_credit                64689 non-null object\n",
-      "payment_included_campaign_gift_card         64689 non-null object\n",
-      "payment_included_web_purchased_gift_card    64689 non-null object\n",
+      "payment_included_campaign_gift_card         64689 non-null int64\n",
+      "payment_included_web_purchased_gift_card    64689 non-null int64\n",
       "payment_was_promo_matched                   64689 non-null object\n",
       "is_teacher_referred                         64689 non-null object\n",
       "giving_page_id                              14242 non-null object\n",
@@ -9657,7 +9657,7 @@
       "date_completed                              55704 non-null object\n",
       "date_thank_you_packet_mailed                52539 non-null object\n",
       "date_expiration                             64689 non-null object\n",
-      "dtypes: bool(1), float64(16), int64(1), object(53)\n",
+      "dtypes: bool(1), float64(16), int64(3), object(51)\n",
       "memory usage: 35.1+ MB\n"
      ]
     }
@@ -9669,7 +9669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9703,6 +9703,68 @@
    ],
    "source": [
     "TopUp_Projects.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>col_0</th>\n",
+       "      <th>Top_Up</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Top_Up</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>63247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <td>1442</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "col_0   Top_Up\n",
+       "Top_Up        \n",
+       "False    63247\n",
+       "True      1442"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab([TopUp_Projects.Top_Up],columns=['Top_Up'])"
    ]
   },
   {
